--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
-    <script src="/script/script.js" defer></script>
+    <link rel="stylesheet" href="../style/style.css">
+    <script src="../script/script.js" defer></script>
     <title>GoFilms</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <div class="main">
             <div class="select">
                 <div class="option">
-                    <select name="genre" id="">
+                    <select name="genre" id="x">
                         <option hidden selected value="s1" class="name__select">Жанр</option>
                         <option value="s2" onclick="filterGenre()">Детектив</option>
                         <option value="s3" onclick="filterGenre()">Комедия</option>
