--- a/infofilm.html
+++ b/infofilm.html
@@ -4,11 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css">
+    <script src="/script/script_second.js" defer></script>
+    <title>Info</title>
 </head>
 <body>
-    <div class="info__films">
-
-    </div>
+    <header>
+        <div class="header__title">
+            <a href="/index.html" class="main__link"><h1 class="name__title">GoFilms</h1></a>
+            <div class="search__films">
+                <form>
+                  <input type="text" placeholder="Фильмы, сериалы...">
+                  <button type="submit"></button>
+                </form>
+            </div>
+            <div class="menu__header">
+                <p class="text__menu">Главная</p>
+                <p class="text__menu">Фильмы</p>
+                <p class="text__menu">Сериалы</p>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="block">
+            
+        </div>
+        <div class="info__cart">
+        </div>
+    </main>
+    <footer>
+        <div class="footer__menu">
+            <p class="text__footer">Вакансии</p>
+            <p class="text__footer">Реклама</p>
+            <p class="text__footer">Соглашение</p>
+            <p class="text__footer">Справка</p>
+            <p class="text__footer">Блог</p>
+            <p class="text__footer">Предложения</p>
+            <p class="text__footer">Служба поддержки</p>
+        </div>
+    </footer>
 </body>
 </html>
