--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="icon" href="../img/icon.png" type="image/x-icon">
-    <script src="../script/script.js" defer></script>
-    <script src="../script/script_second.js"></script>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="img/icon.png" type="image/x-icon">
+    <script src="script/script.js" defer></script>
+    <script src="script/script_second.js"></script>
     <title>GoFilms</title>
 </head>
 <body>
     <header>
         <div class="header__title">
-            <a href="../index.html" class="main__link"><h1 class="name__title">GoFilms</h1></a>
+            <a href="index.html" class="main__link"><h1 class="name__title">GoFilms</h1></a>
             <div class="search__films">
                 <form>
                   <input type="text" placeholder="Фильмы, сериалы...">
