--- a/infofilm.html
+++ b/infofilm.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
-    <script src="/script/script_second.js" defer></script>
+    <link rel="stylesheet" href="style/style.css">
+    <script src="script/script_second.js" defer></script>
     <title>Info</title>
 </head>
 <body>
     <header>
         <div class="header__title">
-            <a href="/index.html" class="main__link"><h1 class="name__title">GoFilms</h1></a>
+            <a href="index.html" class="main__link"><h1 class="name__title">GoFilms</h1></a>
             <div class="search__films">
                 <form>
                   <input type="text" placeholder="Фильмы, сериалы...">
