--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="img/icon.png" type="image/x-icon">
     <script src="script/script.js" defer></script>
-    <script src="script/script_second.js"></script>
+<!--     <script src="script/script_second.js"></script> -->
     <title>GoFilms</title>
 </head>
 <body>
